Modularization rt-fi, rt-ha and servlet.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>